# HN-Classification

./: External_TCGA_Inference (2).ipynb  README.md  extract_features_titan_external_v3 (1).py  materials_thesis.tex  pyproject.toml  requirements.txt  submit_extract_titan_tcga_v2 (1).sh  submit_extract_titann (1).sh  tile_indexer.sh  tile_indexer_fixed (1).py  tile_set_tcga (2).sh  training-9OTTOBRE_FINAL_TITAN-reproducible (1).ipynb
configs/data/: base.yaml
configs/infer/: internal.yaml  tcga.yaml
configs/model/: baseline_clam.yaml  final_transmil.yaml
configs/train/: default.yaml
docs/: data_contracts.md  experiments.md  pipeline.md
docs/thesis/: Conclusion_thesis.tex  introduction_thesis.tex  methods_thesis.tex  results_thesis.tex
notebooks/: 03_case_studies_heatmaps.ipynb  training_notebook.ipynb
scripts/: infer_internal.sh  infer_tcga.sh  run_features_external.sh  run_features_internal.sh  run_indexing.sh  train_cv.sh
src/data/: bag_sampler.py  manifests.py  patient_dataset.py
src/eval/: metrics_cls.py  metrics_survival.py  plots.py
src/inference/: predict_internal.py
src/models/: heads_clam.py  heads_transmil.py  layers_attention.py
src/training/: calibration.py  checkpointing.py  losses.py  trainer.py
src/utils/: io.py  logging.py  seeds.py
