[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-classification"
version = "0.1.0"
description = "HN/LN weakly-supervised MIL pipeline for CRC WSI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "Pillow",
  "transformers",
  "pyarrow",
  "tiatoolbox",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
